# SystemProofOfConcept

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  index.html  params.json
scripts/: buildScript.sh  setup-travis.sh  testRunner.sh  update-gh-pages.sh
src/: main.cpp  mainTests.cpp  polygon.cpp  polygon.h
